HTML tidy, rearranged image width rules.
HTML tidy, rearranged image width rules.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
         <div class="name">ALASTAIR FARMAN</div>
     </header>
     <div class="container">
-        <section class="sidescroll" id="retouch"><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span></section>
-        <section class="sidescroll" id="photography"><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span><span class="imagecontainer"></span></section>
-        <section class="sidescroll" id="threeD"><span class="imagecontainer"><img id="wb" src="./img/waterbottle1.png"></span><span class="imagecontainer"><img src="./img/R6.png"></span><span class="imagecontainer"><img src="./img/R4.png"></span><span class="imagecontainer"><img src="./img/particlew.png"></span></section>
+        <section class="sidescroll" id="retouch"></section>
+        <section class="sidescroll" id="photography"></section>
+        <section class="sidescroll" id="threeD">
+            <span class="imagecontainer"><img id="wb" src="./img/waterbottle1.png"></span>
+            <span class="imagecontainer"><img src="./img/R6.png"></span>
+            <span class="imagecontainer"><img src="./img/R4.png"></span>
+            <span class="imagecontainer"><img src="./img/R2.png"></span>
+            <span class="imagecontainer"><img src="./img/R1.png"></span>
+            <span class="imagecontainer"><img src="./img/particlew.png"></span>
+            <span class="imagecontainer"><img src="./img/T2.jpg"></span>
+            <span class="imagecontainer"><img src="./img/T4.jpg"></span>
+            <span class="imagecontainer"><img src="./img/T3.jpg"></span>
+        </section>
         <section id="frontEnd"></section>
     </div>
     <footer></footer>
