added video. needs sizing rules

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <section class="sidescroll" id="photography"></section>
         <section class="sidescroll" id="threeD">
             <span class="imagecontainer"><img id="wb" src="./img/waterbottle1.png"></span>
+            <span class="imagecontainer">
+                    <video width="80%" height="auto" controls autoplay muted src="./img/0001-0237.mp4" type="video.mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </span>
             <span class="imagecontainer"><img src="./img/R6.png"></span>
             <span class="imagecontainer"><img src="./img/R4.png"></span>
             <span class="imagecontainer"><img src="./img/R2.png"></span>
@@ -32,6 +37,7 @@
             <span class="imagecontainer"><img src="./img/T2.jpg"></span>
             <span class="imagecontainer"><img src="./img/T4.jpg"></span>
             <span class="imagecontainer"><img src="./img/T3.jpg"></span>
+            
         </section>
         <section id="frontEnd"></section>
     </div>
