--- a/index.html
+++ b/index.html
@@ -21,15 +21,34 @@
     </header>
     <div class="container">
         <section class="sidescroll" id="retouch"></section>
+
         <section class="sidescroll" id="photography"></section>
+
         <section class="sidescroll" id="threeD">
-            <span class="imagecontainer"><img id="wb" src="./img/waterbottle1.png"></span>
+
+           <span class="info">
+                <p class="number">1.</p>
+                <p>Water bottle created using basic modelling, materials and testing geometry nodes to apply condensation droplets.</p>
+            </span>
+
             <span class="imagecontainer">
-                    <video width="80%" height="auto" controls autoplay muted src="./img/0001-0237.mp4" type="video.mp4">
+                <img id="wb" src="./img/waterbottle1.png">     
+            </span>
+
+            <span class="info">
+                <p class="number">2.</p>
+                <p>Creepy video</p>
+            </span>
+
+            <span class="imagecontainer">
+                    <video width="100%" height="100%" controls autoplay muted src="./img/0001-0237.mp4" type="video.mp4">
                         Your browser does not support the video tag.
                     </video>
-                </span>
-            <span class="imagecontainer"><img src="./img/R6.png"></span>
+            </span>
+
+            <span class="imagecontainer">
+                <img src="./img/R6.png">
+            </span>
             <span class="imagecontainer"><img src="./img/R4.png"></span>
             <span class="imagecontainer"><img src="./img/R2.png"></span>
             <span class="imagecontainer"><img src="./img/R1.png"></span>
